fix(blog): patch no-wrap on blog cards on blog index

--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -7,8 +7,11 @@ $grid-gutter-32: (
   @include grid-container;
   display: flex;
 
-  @media only screen and
-  (max-width: $screen-sm) {
+  &.flex-wrap {
+    flex-wrap: wrap;
+  }
+
+  @media only screen and (max-width: $screen-sm) {
     display: block;
   }
 }
@@ -16,7 +19,6 @@ $grid-gutter-32: (
 ul.card-container {
   padding-left: 0;
 }
-
 
 // =============================================================================
 // Card
@@ -34,10 +36,9 @@ ul.card-container {
   padding: $padding-vertical $padding-horizontal;
   background: #ffffff;
   text-align: left;
-  transition: all .1s ease-in-out;
+  transition: all 0.1s ease-in-out;
 
-  @media only screen and
-  (max-width: $screen-sm) {
+  @media only screen and (max-width: $screen-sm) {
     @include grid-column(12);
     margin-bottom: 40px;
     padding: 32px;
@@ -71,13 +72,11 @@ ul.card-container {
     margin-bottom: 16px;
     font-family: $header-font;
 
-     @media only screen and
-    (max-width: $screen-md) {
+    @media only screen and (max-width: $screen-md) {
       font-size: 19px;
     }
 
-    @media only screen and
-    (max-width: $screen-sm) {
+    @media only screen and (max-width: $screen-sm) {
       font-size: 22px;
     }
   }
@@ -86,8 +85,7 @@ ul.card-container {
     font-size: 16px;
     margin-bottom: 0;
 
-    @media only screen and
-    (max-width: $screen-md) {
+    @media only screen and (max-width: $screen-md) {
       font-size: 14px;
     }
   }
@@ -146,20 +144,17 @@ ul.card-container {
   }
 }
 
-
 .card--c4 {
   @extend %card;
   @include grid-column(4);
 
-  @media only screen and
-  (max-width: $screen-sm) {
+  @media only screen and (max-width: $screen-sm) {
     @include grid-column(8);
     @include grid-shift(2);
     display: block;
   }
 
-  @media only screen and
-  (max-width: $screen-xs) {
+  @media only screen and (max-width: $screen-xs) {
     @include grid-column(12);
     @include grid-shift(0);
   }
@@ -169,15 +164,13 @@ ul.card-container {
   @extend %card;
   @include grid-column(6);
 
-  @media only screen and
-  (max-width: $screen-sm) {
+  @media only screen and (max-width: $screen-sm) {
     @include grid-column(8);
     @include grid-shift(2);
     display: block;
   }
 
-  @media only screen and
-  (max-width: $screen-xs) {
+  @media only screen and (max-width: $screen-xs) {
     @include grid-column(12);
     @include grid-shift(0);
   }
@@ -185,16 +178,18 @@ ul.card-container {
   &.is-grid-gutter-32 {
     @include grid-column(6, $grid-gutter-32);
 
-    @media only screen and
-    (max-width: $screen-sm) {
+    @media only screen and (max-width: $screen-sm) {
       @include grid-column(10);
       @include grid-shift(1);
     }
 
-    @media only screen and
-    (max-width: $screen-xs) {
+    @media only screen and (max-width: $screen-xs) {
       @include grid-column(12);
       @include grid-shift(0);
     }
+  }
+
+  &.is-mb-32 {
+    margin-bottom: 32px;
   }
 }
